--- a/settingwindow.ui
+++ b/settingwindow.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>SettingWindow</class>
  <widget class="QMainWindow" name="SettingWindow">
+  <property name="windowModality">
+   <enum>Qt::ApplicationModal</enum>
+  </property>
   <property name="enabled">
    <bool>true</bool>
   </property>
@@ -23,7 +26,7 @@
    <cursorShape>ArrowCursor</cursorShape>
   </property>
   <property name="windowTitle">
-   <string>设置界面</string>
+   <string>Settings</string>
   </property>
   <property name="documentMode">
    <bool>true</bool>
@@ -94,7 +97,7 @@
            <string/>
           </property>
           <property name="minimum">
-           <number>5</number>
+           <number>15</number>
           </property>
           <property name="maximum">
            <number>30</number>
@@ -112,8 +115,8 @@
    <widget class="QWidget" name="horizontalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>384</x>
-      <y>460</y>
+      <x>380</x>
+      <y>510</y>
       <width>411</width>
       <height>81</height>
      </rect>
@@ -143,7 +146,6 @@
     </layout>
    </widget>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
  <connections/>
